--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,7 +12,7 @@ floating_modifier $mod
 
 bindsym $mod+q kill
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Ctrl+l exec ~/.cfg/bin/fancylock
+bindsym $mod+Ctrl+l exec dm-tool lock
 bindsym $mod+d exec rofi -show drun -show-icons 
 
 # change focus
