--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -39,7 +39,14 @@ blur-background-fixed = false;
 blur-kern = "3x3box";
 blur-method = "kawase";
 blur-strength = 5;
-blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+
+blur-background-exclude = [
+	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'popup_menu'",
+	"window_type = 'utility'",
+];
 
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
@@ -60,6 +67,7 @@ detect-client-leader = true;
 invert-color-include = [ ];
 glx-copy-from-front = false;
 glx-swap-method = "undefined";
+
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
