--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -48,6 +48,10 @@ blur-background-exclude = [
 	"window_type = 'utility'",
 ];
 
+opacity-rule = [
+	"90:class_g = 'Subl3'"
+]
+
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
