add ease of use options to mpv

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,1 +1,11 @@
 input-file = ~~/mpv-pipe
+volume=100
+sub-font="Roboto Light"
+sub-font-size=55
+sub-scale=1
+save-position-on-quit
+
+slang=enUS,en,eng,ptBR,pt
+alang=jp,jpn,enUS,en,eng,ptBR,pt
+
+blend-subtitles
