rice tmux, add keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,22 +8,28 @@ unbind '"'
 unbind %
 bind \ split-window -h
 bind - split-window -v
+bind r source-file ~/.tmux.conf
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+bind -n M-Tab select-window -t !
+bind -n M-[ previous-window
+bind -n M-] next-window
+bind -n M-g resize-pane -Z
+bind -n M-S-Left resize-pane -L 5
+bind -n M-S-Right resize-pane -R 5
+bind -n M-S-Up resize-pane -U 5
+bind -n M-S-Down resize-pane -D 5
 
-bind r source-file ~/.tmux.conf
+set -g base-index 1
+set -g renumber-windows on
 
-# improve colors
-set -g default-terminal "screen-256color"
-
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right ''
+set -g window-status-format '#[bg=terminal,fg=colour8]#I·#W'
+set -g window-status-current-format '#[fg=colour3,underscore]#I·#W'
 
+set -g status-style bg=terminal,fg=colour3
+set -g status-right-style bg=colour3,fg=black
+set -g status-right ' tmux|#S '
