--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,15 +1,15 @@
 ## shadow
-shadow = false;
+shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
 shadow-radius = 5;
-shadow-offset-x = -5;
-shadow-offset-y = -5;
-shadow-opacity = 0.40;
-shadow-red = 1;
-shadow-green = 1;
-shadow-blue = 1;
+shadow-offset-x = -6;
+shadow-offset-y = -6;
+shadow-opacity = 0.9;
+shadow-red = 0;
+shadow-green = 0;
+shadow-blue = 0;
 shadow-exclude = [ "class_g = 'Cairo-clock'" ,
 	"class_g = 'CoverGloobus'",
 	"class_g = 'Tilda'",
