fix tmux binding for /

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ bind-key C-s send-prefix
 
 unbind '"'
 unbind %
-bind \ split-window -h
+bind '\' split-window -h
 bind - split-window -v
 bind r source-file ~/.tmux.conf
 
