fix firefox extra transparent padding on popups

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -15,8 +15,7 @@ shadow-exclude = [ "class_g = 'Cairo-clock'" ,
 	"class_g = 'Tilda'",
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
-	"class_g = 'Firefox'",
-	"class_g = 'Firefox-esr'",
+	"role = 'Popup'",
 	"class_g = 'Dmenu'",
 	"name = 'Notification'",
 	"_GTK_FRAME_EXTENTS@:c"
