--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -48,7 +48,8 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [
-	"90:class_g = 'Subl3'"
+	"90:class_g = 'Subl3'",
+	"85:class_g = 'Thunar'"
 ]
 
 mark-wmwin-focused = true;
