refactor compton.conf

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,8 +1,5 @@
 ## shadow
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
 shadow-radius = 5;
 shadow-offset-x = -6;
 shadow-offset-y = -6;
@@ -57,9 +54,8 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "opengl-swc";
+vsync = true;
 dbe = false;
-paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ,
 	"class_g = 'CoverGloobus'",
 	"class_g = 'Tilda'",
@@ -70,9 +66,19 @@ detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
 glx-copy-from-front = false;
-glx-swap-method = "undefined";
 
-wintypes:
-{
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+wintypes: {
+	tooltip = {
+		fade = true;
+		shadow = true;
+		opacity = 0.75;
+		focus = true;
+	};
+	dock = {
+		shadow = false;
+	};
+	dnd = {
+		shadow = false;
+	};
 };
+
