--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,5 +1,6 @@
 ## shadow
 shadow = true;
+clear-shadow = true;
 shadow-radius = 5;
 shadow-offset-x = -6;
 shadow-offset-y = -6;
@@ -54,8 +55,9 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = true;
+vsync = "opengl-swc";
 dbe = false;
+paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ,
 	"class_g = 'CoverGloobus'",
 	"class_g = 'Tilda'",
