add azure and gitlab id

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,7 +1,9 @@
 
-Host github.com
-	User git
+Host github.com vs-ssh.visualstudio.com gitlab.com
+	StrictHostKeyChecking no
+	UserKnownHostsFile /dev/null
 	IdentityFile ~/.ssh/github_key
+	LogLevel ERROR
 
 Host raspi
 	Hostname raspi.local
