fix git alias, add global ignore

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -2,4 +2,4 @@
 	email = meisniyi@gmail.com
 	name = Adeniyi Adeosun
 [alias]
-	graph = log --graph --oneline --decorate=short
+	graph = log --graph --oneline –decorate=short
