add git settings

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -3,3 +3,7 @@
 	name = Adeniyi Adeosun
 [alias]
 	graph = log --graph --oneline --decorate=short
+[init]
+	defaultBranch = main
+[pull]
+	rebase = false
