adjust ssh settings

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,8 +1,20 @@
 
-Host github.com vs-ssh.visualstudio.com gitlab.com
+Host github.com gitlab.com bitbucket.org
 	StrictHostKeyChecking no
 	UserKnownHostsFile /dev/null
-	IdentityFile ~/.ssh/github_key
+	IdentityFile ~/.ssh/git.key
+	LogLevel ERROR
+
+Host ssh.dev.azure.com
+	StrictHostKeyChecking no
+	UserKnownHostsFile /dev/null
+	IdentityFile ~/.ssh/azure.key
+	LogLevel ERROR
+
+Host gracitfoundation.org
+	StrictHostKeyChecking no
+	IdentityFile ~/.ssh/gracit.key
+	UserKnownHostsFile /dev/null
 	LogLevel ERROR
 
 Host raspi
