--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -10,6 +10,8 @@ Host ssh.dev.azure.com
 	UserKnownHostsFile /dev/null
 	IdentityFile ~/.ssh/azure.key
 	LogLevel ERROR
+	PubkeyAcceptedAlgorithms +ssh-rsa
+	HostkeyAlgorithms +ssh-rsa
 
 Host gracitfoundation.org
 	StrictHostKeyChecking no
