add mpv autofit

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -4,6 +4,7 @@ sub-font="Roboto Light"
 sub-font-size=55
 sub-scale=1
 save-position-on-quit
+autofit=80%
 
 slang=enUS,en,eng,ptBR,pt
 alang=jp,jpn,enUS,en,eng,ptBR,pt
