--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -6,5 +6,7 @@ UP     add volume 5
 DOWN   add volume -5
 n      playlist-next
 p      playlist-prev
+{      sub-seek -1
+}      sub-seek 1
 Alt+RIGHT no-osd cycle-values video-rotate  "90" "180" "270" "0"
 Alt+LEFT no-osd cycle-values video-rotate  "270" "180" "90" "0"
