add local config include and remove raspi host settings

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,3 +1,4 @@
+Include config.local
 
 Host github.com gitlab.com bitbucket.org
 	StrictHostKeyChecking no
@@ -18,8 +19,4 @@ Host gracitfoundation.org
 	IdentityFile ~/.ssh/gracit.key
 	UserKnownHostsFile /dev/null
 	LogLevel ERROR
-
-Host raspi
-	Hostname raspi.local
-	User niyi_ao
 
