change prefix to M-s and enable set-titles options

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 setw -g mouse on
 
 unbind C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
+set-option -g prefix M-s
+bind-key M-s send-prefix
 
 unbind '"'
 unbind %
@@ -33,3 +33,7 @@ set -g window-status-current-format '#[fg=colour3,underscore]#I·#W'
 set -g status-style bg=terminal,fg=colour3
 set -g status-right-style bg=colour3,fg=black
 set -g status-right ' tmux|#S '
+
+set-option -g set-titles on
+set-option -g set-titles-string "#W"
+
