add sub-auto option and screenshot directory

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,4 +1,5 @@
 volume=100
+sub-auto=fuzzy
 sub-font="Roboto Light"
 sub-font-size=55
 sub-scale=1
@@ -7,5 +8,5 @@ autofit=80%
 
 slang=enUS,en,eng,ptBR,pt
 alang=jp,jpn,enUS,en,eng,ptBR,pt
-
+screenshot-directory="~/Screenshots"
 blend-subtitles
