--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,12 +1,5 @@
-
-# If this is enabled, treat all the following bindings as default.
-#default-bindings start
-
-UP     add volume 5
-DOWN   add volume -5
-n      playlist-next
-p      playlist-prev
-{      sub-seek -1
-}      sub-seek 1
-Alt+RIGHT no-osd cycle-values video-rotate  "90" "180" "270" "0"
-Alt+LEFT no-osd cycle-values video-rotate  "270" "180" "90" "0"
+UP	add volume	5
+DOWN	add volume	-5
+Alt+RIGHT	no-osd cycle-values video-rotate	"90" "180" "270" "0"
+Alt+LEFT	no-osd cycle-values video-rotate	"270" "180" "90" "0"
+ctrl+b	script-binding	toggle_mpvDLNA
