misc config updates

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -7,13 +7,14 @@
 
 [alias]
 	graph = log --graph --oneline --decorate=short
-	list = diff --name-only
+	list = diff --name-only main
 	squash = commit -a --amend -C HEAD
 	master-rebase = !git fetch && git rebase origin/main
 	publish = push --force-with-lease
 	pub = publish
 	fix = commit --fixup
 	continue = !git rebase --continue || git merge --continue || git cherry-pick --continue
+	branches = "for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)%09%(color:red)%(authorname)%09%(color:white)%(color:bold)%(refname:short)\" refs/remotes"
 
 [absorb]
 	oneFixupPerCommit = true
@@ -25,6 +26,10 @@
 
 [diff]
 	tool = difftastic
+	algorithm = histogram
+	colorMoved = plain
+	mnemonicPrefix = true
+	renames = true
 
 [difftool]
 	prompt = false
@@ -38,18 +43,27 @@
 [pull]
 	rebase = false
 	ff = only
+
 [push]
 	default = current
 	autoSetupRemote = true
+	useForceIfIncludes = true
+
 [rebase]
 	autosquash = true
+	updateRefs = true
 
 [include]
 	path = config.local
 
-[url "git@github.com:"] 
+[url "git@github.com:"]
     insteadOf = https://github.com/
 
 [branch]
-	sort = committerdate
+	sort = -committerdate
 
+[column]
+	ui = auto
+
+[tag]
+	sort = -version:refname
