--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,22 +1,18 @@
 Include config.local
 
+Host *
+	IdentityAgent ~/.1password/agent.sock
+	IdentityFile ~/.ssh/id.pub
+	IdentitiesOnly yes
+	LogLevel ERROR
+
 Host github.com gitlab.com bitbucket.org
 	StrictHostKeyChecking no
 	UserKnownHostsFile /dev/null
-	IdentityFile ~/.ssh/git.key
-	LogLevel ERROR
-
-Host ssh.dev.azure.com
-	StrictHostKeyChecking no
-	UserKnownHostsFile /dev/null
-	IdentityFile ~/.ssh/azure.key
-	LogLevel ERROR
-	PubkeyAcceptedAlgorithms +ssh-rsa
-	HostkeyAlgorithms +ssh-rsa
+	IdentityFile ~/.ssh/git.pub
 
 Host gracitfoundation.org
 	StrictHostKeyChecking no
-	IdentityFile ~/.ssh/gracit.key
+	IdentityFile ~/.ssh/gracit.pub
 	UserKnownHostsFile /dev/null
-	LogLevel ERROR
 
